# jupyter-packaging

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  appveyor.yml  jupyter_distutils.py  jupyter_packaging.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: check-release.yml  main.yml
jupyter_packaging/: __init__.py  __main__.py  build_api.py  build_flit.py  jlpmapp.py  setupbase.py
tests/: conftest.py  test_build_api.py  test_build_flit.py  test_core_functions.py  test_datafiles_install.py  test_datafiles_paths.py  test_deprecated.py  test_develop.py  test_ensure_targets.py  test_find_packages.py  test_install.py  test_is_stale.py  test_main.py  test_skip_if_exists.py  test_utility_functions.py  test_which.py  utils.py
