[build-system]
requires = ["setuptools>=46.4.0", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[tool.jupyter-releaser]
skip = ["check-links"]

[tool.tbump.version]
current = "0.12.0"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "jupyter_packaging/setupbase.py"

[tool.pytest.ini_options]
addopts= "-raXs  --durations 10 --color=yes --doctest-modules"
testpaths = [
    "tests/"
]
timeout = 300
# Restore this setting to debug failures
# timeout_method = "thread"
filterwarnings= [
  # Fail on warnings
  "error",
  # Ignore our own deprecation warnings.
  "ignore:.*:deprecation.DeprecatedWarning"
]
