[metadata]
name = jupyter_packaging
version = attr: jupyter_packaging.setupbase.__version__
description = Jupyter Packaging Utilities.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = http://jupyter.org
project_urls =
    Source = https://github.com/jupyter/jupyter-packaging/
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter, packaging
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    packaging
    tomlkit
    setuptools>=60.2.0
    wheel
    deprecation

[options.extras_require]
test = build; coverage; pre-commit; pytest; pytest-cov; pytest-mock

[bdist_wheel]
universal=1
