[metadata]
name = jupyter_packaging
version = attr: jupyter_packaging.setupbase.__version__
description = Jupyter Packaging Utilities.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = http://jupyter.org
project_urls =
    Source = https://github.com/jupyter/jupyter-packaging/
    Bug Tracker = https://github.com/jupyter/jupyter-packaging/issues
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter, packaging
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    packaging
    tomlkit
    setuptools>=60.2.0
    wheel
    deprecation

[options.extras_require]
test =
    build
    coverage
    pre-commit
    pytest
    pytest-cov
    pytest-mock
    pytest-timeout

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal=1

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    # E731 do not assign a lambda expression, use a def
    tests/*: B011, F841, E731
